--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 .container {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,50,0.8), rgba(0,0,50,0.8)), url(background.png);
+    background-image: linear-gradient(rgba(0,0,50,0.7), rgba(0,0,50,0.7)), url("../img/background.jpeg");
     background-position: center;
     background-size: cover;
     position: relative;
