--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,15 @@
     position: relative;
 }
 
+.form-box {
+    background: #fff;
+    width: 90%;
+    max-width: 28rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 50px 60px 70px;
+    text-align: center;
+    border-radius: 2rem;
+}
