--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 .container {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,50,0.7), rgba(0,0,50,0.7)), url("../img/background.jpeg");
+    background-image: linear-gradient(rgba(35, 0, 90, 0.85), rgba(35, 0, 90, 0.85)), url("../img/background.jpeg");
     background-position: center;
     background-size: cover;
     position: relative;
@@ -72,7 +72,7 @@ input {
 
 form p {
     text-align: left;
-    font-size: 0.813rem;
+    font-size: 0.9rem;
 }
 
 form p a {
